# janitr

./: .gitignore  .prettierignore  ACCOUNTS.md  AGENTS.md  LABELS.md  LICENSE  Makefile  README.md  SOURCES.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.toml
.husky/: pre-commit
config/: thresholds.json  thresholds.transformer.json
data/: accounts.jsonl  ai-reply-attractor-accounts.json  ai-reply-taggers.jsonl  label_changes_2026-02-02.txt  levelsio-callouts-fetched.jsonl  levelsio-callouts-raw.jsonl  levelsio-deep-callouts.jsonl  levelsio-flagged-ai-reply-bots.jsonl  levelsio-pre-dec13-callouts.jsonl  other-taggers-callouts-raw.jsonl  (+7 more)
scripts/: build_unlabeled_corpus.py  cache_teacher_logits.py  calibrate_teacher.py  check_integrity.py  check_reply_integrity.py  check_split_drift.py  check_split_leakage.py  compare_models_fpr.py  evaluate.py  evaluate_transformer.py  export_transformer_student_onnx.py  fetch_callout_threads.py  fetch_levelsio_remaining.py  fetch_other_taggers.py  fetch_other_taggers_deep.py  fix_duplicate_ids.py  inference.py  labelset.py  make_holdout.py  make_stratified_splits.py  manual_relabel.py  mine_errors.py  prepare_data.py  prepare_hf.py  pyproject.toml  quantize_transformer_student.py  reduce_fasttext.py  relabel_crypto.py  run_naming.py  scrape_levelsio_deep.py  student_runtime.py  sync_experiments_from_remote.sh  sync_to_experiments_repo.py  train_fasttext.py  train_teacher_dapt.py  train_transformer_student_distill.py  train_transformer_teacher.py  transformer_common.py  tune_threshold.py  tune_thresholds_fpr.py  (+3 more)
(+129 files in other folders)
