[project]
name = "janitr"
version = "0.1.0"
description = "Scam detection model for browser extension"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fasttext-wheel>=0.9.2",
    "jsonschema>=4.26.0",
    "numpy<2",
    "onnx>=1.17.0",
    "onnxscript>=0.2.0",
    "onnxruntime>=1.20.0",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
    "transformers>=4.48.0",
    "tqdm>=4.67.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
